<resources>
    <string name="app_name">ClientBus</string>
    <string name="et_login">Usuario/Matricula</string>
    <string name="et_password">Contraseña</string>
    <string name="btn_iniciar_sesion">Iniciar sesión</string>
    <string name="error_cerrar_recurso">Error #C8CR</string>
    <string name="error_pulsando_vista">Estaría bien saber el botón que has pulsado...</string>
    <string name="msj_inicio_correcto">Inicio de sesión correcto.</string>
    <string name="msj_inicio_incorrecto">Inicio de sesión incorrecto.</string>
    <string name="campo_login_error">La matrícula es requerida.</string>
    <string name="campo_contrasena_error">La contraseña es requerida.</string>
    <string name="menu_ajustes">Ajustes</string>
    <string name="preferencias_titulo_servidor">Configuración del servidor</string>
    <string name="key_ip_servidor" translatable="false">prefs_ip_servidor</string>
    <string name="descripcion_ip_servidor">Introduce la IP del servidor Rest.</string>
    <string name="titulo_ip_servidor">IP Servidor REST</string>
    <string name="preferencias_acerca_de">Acerca de</string>
    <string name="descripcion_acerca_de">Diseño y código por Joan Creus Martin.</string>
    <string name="titulo_acerca_de">Información</string>
    <string name="titulo_tarea_asincrona">Cargando...</string>
    <string name="hint_ip">Ej. 192.168.1.12</string>
    <string name="error_ip_incorrecta">Parece que la IP del servidor no está introducida o está mal formada.\\nIntroduce una IP correcta.</string>
    <string name="error_introducir_ip">Introduce una IP para el servidor.</string>
    <string name="alert_aceptar">Aceptar</string>
    <string name="activity_configuracion_nombre">Configuración</string>
    <string name="error_rest">Ha ocurrido un error con el servidor Rest\nAsegurate que está bien configurado.</string>
    <string name="key_id_sesion">prefs_id_sesion</string>
    <string name="error_al_iniciar_sesion">No se ha iniciado sesión correctamente.</string>
    <string name="sesion_cerrar_titulo">Cerrando sesión...</string>
    <string name="mensaje_sesion_dialog">Esperando respuesta del servidor Rest...\n(Puede tardar incluso unos minutos, sea paciente)</string>
    <string name="info_sesion_actual">ID Sesión actual:</string>
    <string name="btn_cerrar_sesion">Cerrar sesión</string>
    <string name="txt_info_sesion">Información sesión actual</string>
    <string name="txt_info_inicio">Inicio de sesión</string>
    <string name="info_permisos_txt">* Debes aceptar los permisos de localización para poder utilizar el servicio de localización. Pulsa sobre este texto para solicitarlos.</string>
    <string name="activity_sesion">Sesión</string>
    <string name="info_toast_servicio_disabled">El servicio se ha detenido porque se ha deshabilitado el proveedor de localizaciones.</string>
    <array name="info_tarea_asincrona">
        <item>Inicializando tarea en segundo plano</item>
        <item>Creando conexión con el servidor Rest</item>
        <item>Construyendo información para enviar al servidor Rest.</item>
        <item>Enviando petición al servidor Rest.</item>
        <item>Esperando respuesta del servidor Rest.</item>
        <item>Error a la hora de acceder al servidor Rest.</item>
        <item>Comprobando con la base de datos local</item>
        <item>Completando...</item>
    </array>
    <string name="hint_puerto">Ej. 8080</string>
    <string name="key_puerto_servidor">prefs_puerto_servidor</string>
    <string name="tituli_puerto_servidor">Puerto del servidor</string>
    <string name="descripcion_puerto_servidor">Puerto por el cual se conectara al servidor (Por defecto 8080).</string>
</resources>
