<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.reskitow.clientbus.Control.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/txt_info_inicio"
        android:textSize="17sp" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <EditText
                android:id="@+id/et_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/et_login"
                android:inputType="textCapCharacters" />

            <TextView
                android:id="@+id/login_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="4dp"
                android:text="@string/campo_login_error"
                android:textColor="@color/colorRojoClaro"
                android:textSize="12sp"
                android:visibility="gone" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/et_password"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/contrasena_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="4dp"
                android:paddingTop="4dp"
                android:text="@string/campo_contrasena_error"
                android:textColor="@color/colorRojoClaro"
                android:textSize="12sp"
                android:visibility="gone" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:text="@string/btn_iniciar_sesion" />
        </LinearLayout>


    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/info_permisos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/info_permisos_txt"
        android:visibility="gone" />
</LinearLayout>
